# textsurf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
etc/: textsurf.run.sh
src/: apidocs.rs  common.rs  main.rs  textpool.rs
test/: test.http
