[package]
name = "textsurf"
version = "0.1.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Webservice for serving plain text documents"
documentation = "https://docs.rs/textsurf"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/knaw-huc/textsurf"
keywords = [ "text-processing", "annotation", "standoff", "nlp", "text"]

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread","signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features= ["trace", "normalize-path"] }
textframe = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1.1", features = ["axum", "vendored"] }
