[package]
name = "textsurf"
version = "0.2.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Webservice for efficiently serving multiple plain text documents or excerpts thereof (by unicode character offset), without everything into memory."
documentation = "https://docs.rs/textsurf"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/knaw-huc/textsurf"
keywords = [ "text-processing", "annotation", "standoff", "nlp", "text"]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.45.0", features = ["macros","rt-multi-thread","signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features= ["trace", "normalize-path"] }
textframe = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }
const_format = "0.2.34"
walkdir = "2.5.0"
