[package]
name = "textsurf"
version = "0.5.0" #also adapt in Makefile
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>", "Miel Peeters <miel.peeters@ugent.be>"]
description = "Webservice for efficiently serving multiple plain text documents or excerpts thereof (by unicode character offset), without everything into memory."
documentation = "https://docs.rs/textsurf"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/knaw-huc/textsurf"
keywords = [ "text-processing", "annotation", "standoff", "nlp", "text"]

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros","rt-multi-thread","signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features= ["trace", "normalize-path"] }
textframe = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
const_format = "0.2.35"
walkdir = "2.5.0"
md5 = "0.8.0"
smallvec = "1.15.1"
futures = "0.3.31"
